--- a/.env
+++ b/.env
@@ -12,5 +12,6 @@ CLOUDINARY_CLOUD_NAME=dorijqoyc
 CLOUDINARY_API_KEY=432674681664288
 CLOUDINARY_API_SECRET=Jr70zuQHVxRdGBqY-fNT5iXKLFg
 
-CLIENT-URL=http://localhost:5173
+STRIPE_SECRET_KEY=sk_test_123
 
+CLIENT-URL=http://localhost:5173
